<resources>
    <string name="app_name">HighQualityAudio</string>

    <!-- Channel list -->
    <string name="channel_list_title">Chat Rooms</string>

    <string-array name="channel_titles">
        <item>VoiceDemo1</item>
        <item>VoiceDemo2</item>
        <item>VoiceDemo3</item>
        <item>VoiceDemo4</item>
        <item>VoiceDemo5</item>
    </string-array>

    <!-- Chat room -->
    <string name="room_user_hint">User\u00A0</string>
    <string name="room_message_edit_hint">Let\'s\u00A0 say \u00A0 something.</string>
    <string name="user_joined_hint">User joined</string>
    <string name="seat_taken">Seat %d is already taken</string>
    <string name="warn_user_has_taken_a_seat">You have already taken seat %d</string>
    <string name="i_can_speak">You can speak now</string>
    <string name="i_left_seat">You left the seat</string>
    <string name="other_joined">User %d has taken a seat</string>
    <string name="other_left_seat">User %d has left a seat</string>

    <string-array name="voice_change_items">
        <item>None</item>
        <item>Vigorous</item>
        <item>Deep</item>
        <item>Mellow</item>
        <item>Falsetto</item>
        <item>Full</item>
        <item>Clear</item>
        <item>Resounding</item>
        <item>Ringing</item>
        <item>Spacial</item>
    </string-array>

    <string-array name="voice_beauty_items">
        <item>None</item>
        <item>Male Magnetic</item>
        <item>Female Fresh</item>
        <item>Female vitality</item>
    </string-array>

    <string-array name="sound_effect_items">
        <item>None</item>
        <item>KTV</item>
        <item>Concert</item>
        <item>Uncle</item>
        <item>Girl</item>
        <item>Studio</item>
        <item>Pop</item>
        <item>R&amp;B</item>
        <item>Phonograph</item>
    </string-array>

    <string-array name="virtual_stereo_items">
        <item>None</item>
        <item>Virtual Stereo</item>
    </string-array>

    <!-- Setting dialog -->
    <string name="setting_dialog_title">Room Settings</string>
    <string name="setting_dialog_voice_change">Voice Change</string>
    <string name="setting_dialog_voice_beauty">Voice Beauty</string>
    <string name="setting_dialog_sound_effect">Sound Effect</string>
    <string name="setting_dialog_virtual_stereo">Virtual Stereo</string>
    <string name="setting_dialog_leave_room">Leave Room</string>
    <string name="setting_dialog_confirm">Confirm</string>
    <string name="setting_dialog_cancel">Cancel</string>
</resources>
