<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_1">

    <TextView
        android:id="@+id/config_room_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@color/blue"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dialog_title_padding_top"
        android:text="@string/setting_dialog_title"
        android:textColor="@color/universal_text_color"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_room_title"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/config_room_voice_change"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_marginTop="@dimen/dialog_item_margin_top"
            android:background="@drawable/bg_config_item">
            <TextView
                style="@style/config_room_item_txt"
                android:text="@string/setting_dialog_voice_change" />
            <ImageView
                style="@style/config_room_item_arrow"
                android:src="@drawable/back_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/config_room_voice_beauty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_marginTop="@dimen/dialog_item_margin_top"
            android:background="@drawable/bg_config_item">
            <TextView
                style="@style/config_room_item_txt"
                android:text="@string/setting_dialog_voice_beauty" />
            <ImageView
                style="@style/config_room_item_arrow"
                android:src="@drawable/back_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/config_room_sound_effect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_marginTop="@dimen/dialog_item_margin_top"
            android:background="@drawable/bg_config_item">
            <TextView
                style="@style/config_room_item_txt"
                android:text="@string/setting_dialog_sound_effect" />
            <ImageView
                style="@style/config_room_item_arrow"
                android:src="@drawable/back_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/config_room_virtual_stereo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_item_height"
            android:layout_marginTop="@dimen/dialog_item_margin_top"
            android:background="@drawable/bg_config_item">
            <TextView
                style="@style/config_room_item_txt"
                android:text="@string/setting_dialog_virtual_stereo" />
            <ImageView
                style="@style/config_room_item_arrow"
                android:src="@drawable/back_white" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/config_room_btn_quit"
        android:layout_width="@dimen/dialog_btn_width"
        android:layout_height="@dimen/dialog_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dialog_btn_margin_bottom"
        android:background="@drawable/bg_button_normal"
        android:text="@string/setting_dialog_leave_room"
        android:textColor="@color/blue"
        android:textSize="@dimen/dialog_btn_text_size" />
</RelativeLayout>